# sitemapmonitor-api

./: .dockerignore  Dockerfile  README.md  alembic.ini  dev.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-ghcr.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_tracked_change_types.py  0003_add_site_check_lock.py  0004_add_site_baseline_state.py  0005_merge_site_status.py  0006_make_sitemap_url_optional.py  0007_add_frontend_auth_tables.py  0008_add_sitemap_url_lastmod_at.py
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py
app/models/: __init__.py  account.py  mixins.py  site.py  sitemap_check.py  sitemap_url.py  sitemap_url_change.py  user.py
app/schemas/: common.py  site.py  sitemap_check.py  sitemap_url.py  sitemap_url_change.py
app/services/: frequency.py  http_client.py  sitemap_checker.py  sitemap_discovery.py  sitemap_parser.py  url_utils.py
app/tasks/: celery_app.py  sitemap_tasks.py
docs/: frontend-api.md
scripts/: check_runtime.py  setup_database.py  setup_database.sh
tests/: test_api_checks.py  test_http_client.py  test_sitemap_checker.py  test_sitemap_discovery.py  test_sitemap_parser.py  test_url_utils.py
